fix's? lets see